Remove unnecessary vcr fixtures.  They take up too much space.
Former-commit-id: 309341b64aeb3a115f03102e36554fcc2b68c192

--- a/app/assets/stylesheets/remotes.css.scss
+++ b/app/assets/stylesheets/remotes.css.scss
@@ -234,7 +234,6 @@ canvas#drawing-surface {
       background-color: $dark-gold;
       border: none;
       border-bottom: $border $light-gold;
-      height: 24px;
     }
 
     p {
@@ -242,46 +241,8 @@ canvas#drawing-surface {
       padding: 10px;
     }
 
-    #linecolor {
-      display: inline !important;
-
-      .input-group-btn {
-        display: inline;
-      }
-    }
-
-    button.color-dropdown {
-      border-radius: 0;
-      height: 27px;
-      padding: 0 5px;
-    }
-
-    .hex-pound, input#color, .color-menu-tabs {
-      display: none;
-    }
-
-    .saturation-text, .lightness-text, .hue-text, .preview-text {
-      display: none;
-    }
-
-    .color-menu {
-      border-radius: 0;
-    }
-
-    .dropdown-menu {
-      min-width: 335px;
-    }
-
-    .advanced-list {
-      margin-top: 0;
-    }
-
-    .advanced-content {
-      top: 10px;
-    }
-
-    .color-preview, .color-box {
-      border-radius: 0;
+    input#color {
+      border: none;
     }
 
     input#line {
